study cohort subsection added: clinical paper

--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -20,6 +20,17 @@
   publisher={Elsevier}
 }
 
+@article{gap3_2018,
+  title={The Movember Foundation's GAP3 cohort: a profile of the largest global prostate cancer active surveillance database to date},
+  author={Bruinsma, Sophie M and Zhang, Liying and Roobol, Monique J and Bangma, Chris H and Steyerberg, Ewout W and Nieboer, Daan and Van Hemelrijck, Mieke and Movember Foundation's Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium and Trock, Bruce and Ehdaie, Behfar and others},
+  journal={BJU international},
+  volume={121},
+  number={5},
+  pages={737--744},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
 @book{rizopoulos2012joint,
 title={Joint Models for Longitudinal and Time-to-Event Data: With Applications in R},
 author={Rizopoulos, Dimitris},
