--- a/report/clinical/main_manuscript.tex
+++ b/report/clinical/main_manuscript.tex
@@ -12,6 +12,9 @@
 \renewcommand{\headrulewidth}{0pt}
 \fancyhead[R]{\thepage}
 
+\usepackage{graphicx}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%
 %% Elsevier bibliography styles
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -87,7 +90,9 @@ Active Surveillance\sep Biopsies \sep Personalized Medicine\sep Prostate Cancer 
 \linenumbers
 
 \include{mainmatter/introduction}
-\include{mainmatter/pat_method}
+\include{mainmatter/study_cohort}
+\include{mainmatter/stat_analysis}
+\include{mainmatter/model_assess}
 \include{mainmatter/result}
 \include{mainmatter/discussion}
 \include{mainmatter/conclusion}
