added data cleaning code for new prias dataset

--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -9,6 +9,18 @@
   publisher={Elsevier}
 }
 
+@article{rizopoulosJMbayes,
+author = {Dimitris Rizopoulos},
+title = {The {R} Package {JMbayes} for Fitting Joint Models for Longitudinal and Time-to-Event Data Using {MCMC}},
+journal = {Journal of Statistical Software},
+volume = {72},
+number = {7},
+year = {2016},
+issn = {1548-7660},
+pages = {1--46},
+publisher={Foundation for Open Access Statistics}
+}
+
 @article{coley2017prediction,
   title={Prediction of the pathologic Gleason score to inform a personalized management program for prostate cancer},
   author={Coley, R Yates and Zeger, Scott L and Mamawala, Mufaddal and Pienta, Kenneth J and Carter, H Ballentine},
