--- a/report/clinical/mainmatter/introduction.tex
+++ b/report/clinical/mainmatter/introduction.tex
@@ -15,7 +15,7 @@ The simplest solution to frequent biopsies is reducing the frequency of biopsies
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/riskBasedExample.eps}}
-\caption{\textbf{Motivation for risk based decisions of biopsy}: Patient A and B had their latest biopsy at year one of follow-up. Patient A's prostate-specific antigen (PSA) profile remained stable until the current visit time at year three. Consequently, his cumulative risk of reclassification at year three is 5\%. On the other hand patient B's PSA profile has shown a rise since the latest biopsy, and his cumulative risk of reclassification is also 20\%. A biopsy may be recommended for patient B than patient A.}
+\caption{\textbf{Motivation for risk based decisions of biopsy}: Patient A and B had their latest biopsy at year one of follow-up. Patient A's prostate-specific antigen (PSA) profile remained stable until the current visit time at year three. Consequently, his cumulative risk of reclassification at year three is 5\%. On the other hand patient B's PSA profile has shown a rise since the latest biopsy, and his cumulative risk of reclassification is also 20\%. Patient B is a better candidate for biopsy than Patient A.}
 \label{fig:riskBasedExample}
 \end{figure}
 
