finished upto stat analysis section

--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,3 +1,5 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
 Resources are more for only serious patients, better decisions like in the case of prostatectomy patients....so personalized approch can lead to better decisions overall as well
+
+ Such a shared random effect structure allows easy addition of more disease progression indicators (e.g., MRI information) when they are available in future. Furthermore, this structure also allows the follow-up schedule for outcomes/biopsies to depend on the observed values of each other. This is especially important because yearly biopsies in the PRIAS program are scheduled on the basis of the observed PSA doubling time of a patient.
