--- a/report/clinical/mainmatter/study_cohort.tex
+++ b/report/clinical/mainmatter/study_cohort.tex
@@ -2,9 +2,7 @@
 \section{Patients and Methods}
 
 \subsection{Study Cohort}
-Prostate Cancer International Active Surveillance (PRIAS) is an ongoing prospective cohort study of men with low- and very-low risk PCa diagnoses \cite{bul2013active}. More than 100 medical centers from 17 countries worldwide contribute to the collection of data, utilizing a common study protocol and a web-based tool, both available at \url{www.prias-project.org}. We use the data collected over a period of ten years (Table \ref{table:prias_summary}), between December 2006 (beginning of PRIAS study) and December 2016. The follow-up protocol scheduled PSA measurements every three months for the first two years and every six months thereafter. Repeat biopsies were scheduled after one, four, seven, and ten years. In addition for patients having PSA doubling time (PSA-DT) between three years and ten years, yearly repeat biopsies were advised. Patients were recommended treatment upon disease reclassification, which is defined as more than two positive cores or Gleason $>$ 6 at repeat biopsy. Due to the periodical nature of biopsies, the true time of disease reclassification remained unknown. However, the time interval in which it occurred was available.
-
-In this paper, the event of interest is disease reclassification. There are three types of competing events, namely death, removal of patients from AS on the basis of PRIAS protocol, and loss to follow-up. However, we focus only on reclassification and consider other events as censored, because reclassification is the trigger for treatment advice.
+Prostate Cancer International Active Surveillance (PRIAS) is an ongoing prospective cohort study of men with low- and very-low risk PCa diagnoses \cite{bul2013active}. More than 100 medical centers from 17 countries worldwide contribute in PRIAS \url{www.prias-project.org}. We use the data collected between December 2006 (beginning of PRIAS study) and May 2019. The follow-up protocol scheduled PSA measurements (ng/mL) every three months for the first two years and every six months thereafter. Repeat biopsies were scheduled after one, four, seven, and ten years. Additional yearly biopsies were scheduled for patients having PSA doubling time between three and ten years. Reclassification (Gleason $>$ 6) was observed in 866 patients, and ... were provided treatment (see Table \ref{table:prias_summary}). Treatment in absence of reclassification may have been advised on the basis of PSA, number of biopsy cores with cancer, or anxiety. However, we focus only on Gleason reclassification because of its strong association with cancer related outcomes. Due to the periodical nature of biopsies, the time of reclassification was only known as a time interval in which it occurred.
 
 \begin{table}
 \small\sf\centering
