--- a/report/clinical/mainmatter/study_cohort.tex
+++ b/report/clinical/mainmatter/study_cohort.tex
@@ -2,7 +2,7 @@
 \section{Patients and Methods}
 
 \subsection{Study Cohort}
-Prostate Cancer International Active Surveillance (PRIAS) is an ongoing prospective cohort study of men with low- and very-low risk PCa diagnoses \cite{bul2013active}. More than 100 medical centers from 17 countries worldwide contribute in PRIAS \url{www.prias-project.org}. We use the data collected between December 2006 (beginning of PRIAS study) and May 2019. The follow-up protocol scheduled PSA measurements (ng/mL) every three months for the first two years and every six months thereafter. Repeat biopsies were scheduled after one, four, seven, and ten years. Additional yearly biopsies were scheduled for patients having PSA doubling time between three and ten years. Reclassification (Gleason $>$ 6) was observed in 866 patients, and ... were provided treatment (see Table \ref{table:prias_summary}). Treatment in absence of reclassification may have been advised on the basis of PSA, number of biopsy cores with cancer, or anxiety. However, we focus only on Gleason reclassification because of its strong association with cancer related outcomes. Due to the periodical nature of biopsies, the time of reclassification was only known as a time interval in which it occurred.
+Prostate Cancer International Active Surveillance (PRIAS) is an ongoing prospective cohort study of men with low- and very-low risk PCa diagnoses \cite{bul2013active}. More than 100 medical centers from 17 countries worldwide contribute in PRIAS \url{www.prias-project.org}. We use the data collected between December 2006 (beginning of PRIAS study) and May 2019. The follow-up protocol scheduled PSA measurements (ng/mL) every three months for the first two years and every six months thereafter. Repeat biopsies were scheduled after one, four, seven, and ten years. Additional yearly biopsies were scheduled for patients having PSA doubling time between three and ten years. Reclassification (Gleason $>$ 6) was observed in 1134 patients, and 2250 were provided treatment (see Table \ref{table:prias_summary}). Treatment in absence of reclassification may have been advised on the basis of PSA, number of biopsy cores with cancer, anxiety, or other undocumented reasons. However, we focus only on Gleason reclassification because of its strong association with cancer related outcomes. Due to the periodical nature of biopsies, the time of reclassification was only known as a time interval in which it occurred.
 
 \begin{table}
 \small\sf\centering
@@ -13,19 +13,20 @@ Prostate Cancer International Active Surveillance (PRIAS) is an ongoing prospect
 \hline
 Characteristic & Value\\
 \hline
-Total patients & 5270\\
-Disease reclassification (primary event) & 866\\
-Loss to follow-up (anxiety or unknown) & 685\\
-Patient removal on the basis of protocol & 464\\
-Death (unrelated to prostate cancer) & 61\\
+Total patients & 7813\\
+Disease reclassification (primary event) & 1134\\
+Treatment & 2250\\
+Watchful waiting & 334\\
+Loss to follow-up & 250\\
+Death (unrelated to prostate cancer) & 95\\
 Death (related to prostate cancer) & 2\\
 \hline
-Median age at diagnosis (years) & 70 (IQR: 65--75)\\
-Median follow-up period per patient (years) &  1.9 (IQR: 1.0--3.8)\\
-Total PSA measurements & 46015\\
-Median number of PSA measurements per patient &  7 (IQR: 7--12)\\
-Median PSA value (ng/mL) & 5.6 (IQR: 4.0--7.5)\\
-Total biopsies & 11042\\
+Median age at diagnosis (years) & 61 (IQR: 66--71)\\
+Median follow-up period per patient (years) &  1.8 (IQR: 0.9--3.99)\\
+Total PSA measurements & 65798\\
+Median number of PSA measurements per patient &  6 (IQR: 4--12)\\
+Median PSA value (ng/mL) & 5.7 (IQR: 4.1--7.7)\\
+Total biopsies & 15563\\
 Median number of biopsies per patient &  2 (IQR: 1--3)\\
 \hline
 \end{tabular}
